fixed top bar alignment

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3943,8 +3943,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-brand {
   float: left;
-  height: 10px;
-  padding: 20px 15px;
+  height: 12px;
+  padding: 10px 15px;
   font-size: 18px;
   line-height: 20px;
 }
@@ -4036,7 +4036,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-form {
   padding: 10px 15px;
-  margin-top: 8px;
+  margin-top: 0px;
   margin-right: -15px;
   margin-bottom: 8px;
   margin-left: -15px;
@@ -4155,7 +4155,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
   .navbar-right {
     float: right !important;
-    margin-right: 200px;
+    /* margin-right: 200px; */
   }
   .navbar-right ~ .navbar-right {
     margin-right: 0;
